--- a/package.json
+++ b/package.json
@@ -11,25 +11,27 @@
     "preview": "nuxt preview .playground",
     "lint": "eslint ."
   },
-  "devDependencies": {
+  "dependencies": {
     "@iconify-json/heroicons": "^1.2.3",
-    "@nuxt/eslint": "latest",
+    "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxt/ui": "^4.0.1",
     "@pinia/colada-devtools": "^0.1.7",
     "@pinia/colada-nuxt": "^0.2.3",
     "@pinia/nuxt": "^0.11.2",
-    "@types/node": "^24.7.0",
     "@vueuse/nuxt": "^13.9.0",
     "dayjs": "^1.11.18",
     "eslint": "^9.37.0",
     "magic-regexp": "^0.10.0",
-    "nuxt": "^4.1.3",
     "scule": "^1.3.0",
-    "typescript": "^5.9.3",
     "vite-plugin-eslint2": "^5.0.4",
-    "vue": "latest",
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/node": "^24.7.0",
+    "nuxt": "^4.1.3",
+    "typescript": "^5.9.3",
+    "vue": "latest"
   }
 }
