--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@pinia/colada-devtools": "^0.1.7",
     "@pinia/colada-nuxt": "^0.2.3",
     "@pinia/nuxt": "^0.11.2",
+    "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^13.9.0",
     "dayjs": "^1.11.18",
     "eslint": "^9.37.0",
+    "happy-dom": "^18.0.1",
     "magic-regexp": "^0.10.0",
+    "playwright-core": "^1.56.0",
     "scule": "^1.3.0",
     "vite-plugin-eslint2": "^5.0.4",
+    "vitest": "^3.2.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
