--- a/package.json
+++ b/package.json
@@ -26,16 +26,18 @@
     "eslint": "^9.37.0",
     "happy-dom": "^18.0.1",
     "magic-regexp": "^0.10.0",
+    "nuxt": "^4.1.3",
+    "pinia": "^3.0.3",
     "playwright-core": "^1.56.0",
     "scule": "^1.3.0",
     "vite-plugin-eslint2": "^5.0.4",
     "vitest": "^3.2.4",
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^24.7.0",
-    "nuxt": "^4.1.3",
-    "typescript": "^5.9.3",
-    "vue": "latest"
+    "typescript": "^5.9.3"
   }
 }
