--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vueuse/nuxt": "^14.0.0",
     "dayjs": "^1.11.18",
     "eslint": "^9.38.0",
+    "fast-equals": "^5.3.2",
     "happy-dom": "^20.0.10",
     "magic-regexp": "^0.10.0",
     "nuxt": "^4.2.0",
