--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@clerk/themes": "^2.4.29",
+    "@clerk/themes": "^2.4.32",
     "@iconify-json/heroicons": "^1.2.3",
     "@nuxt/eslint": "^1.10.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/test-utils": "^3.20.1",
     "@nuxt/ui": "^4.1.0",
-    "@pinia/colada-devtools": "^0.1.7",
-    "@pinia/colada-nuxt": "^0.2.3",
+    "@pinia/colada-devtools": "^0.1.8",
+    "@pinia/colada-nuxt": "^0.2.4",
     "@pinia/nuxt": "^0.11.2",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^14.0.0",
-    "dayjs": "^1.11.18",
-    "eslint": "^9.38.0",
+    "dayjs": "^1.11.19",
+    "eslint": "^9.39.1",
     "fast-equals": "^5.3.2",
     "happy-dom": "^20.0.10",
     "magic-regexp": "^0.10.0",
@@ -32,6 +32,7 @@
     "pinia": "^3.0.3",
     "playwright-core": "^1.56.1",
     "scule": "^1.3.0",
+    "short-uuid": "^5.2.0",
     "vite-plugin-eslint2": "^5.0.4",
     "vitest": "^3.2.4",
     "vue": "^3.5.22",
@@ -39,7 +40,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@types/node": "^24.9.2",
+    "@types/node": "^24.10.0",
     "typescript": "^5.9.3"
   }
 }
