--- a/package.json
+++ b/package.json
@@ -12,35 +12,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@clerk/themes": "^2.4.32",
+    "@clerk/themes": "^2.4.36",
     "@iconify-json/heroicons": "^1.2.3",
     "@nuxt/eslint": "^1.10.0",
-    "@nuxt/image": "^1.11.0",
+    "@nuxt/image": "^2.0.0",
     "@nuxt/test-utils": "^3.20.1",
     "@nuxt/ui": "^4.1.0",
     "@pinia/colada-devtools": "^0.1.8",
     "@pinia/colada-nuxt": "^0.2.4",
-    "@pinia/nuxt": "^0.11.2",
+    "@pinia/nuxt": "^0.11.3",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^14.0.0",
-    "dayjs": "^1.11.19",
     "eslint": "^9.39.1",
-    "fast-equals": "^5.3.2",
     "happy-dom": "^20.0.10",
     "magic-regexp": "^0.10.0",
-    "nuxt": "^4.2.0",
-    "pinia": "^3.0.3",
+    "nuxt": "^4.2.1",
+    "pinia": "^3.0.4",
     "playwright-core": "^1.56.1",
-    "scule": "^1.3.0",
-    "short-uuid": "^5.2.0",
     "vite-plugin-eslint2": "^5.0.4",
     "vitest": "^3.2.4",
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.3",
-    "zod": "^4.1.12"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@types/node": "^24.10.0",
+    "@types/node": "^24.10.1",
     "typescript": "^5.9.3"
   }
 }
