--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9.39.1",
     "happy-dom": "^20.0.10",
     "magic-regexp": "^0.10.0",
+    "motion-v": "^1.7.4",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
     "playwright-core": "^1.56.1",
