--- a/package.json
+++ b/package.json
@@ -23,17 +23,24 @@
     "@pinia/nuxt": "^0.11.3",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^14.0.0",
+    "dayjs": "^1.11.19",
+    "deepmerge": "^4.3.1",
     "eslint": "^9.39.1",
+    "fast-equals": "^5.3.3",
     "happy-dom": "^20.0.10",
     "magic-regexp": "^0.10.0",
     "motion-v": "^1.7.4",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
     "playwright-core": "^1.56.1",
+    "scule": "^1.3.0",
+    "short-uuid": "^5.2.0",
+    "uuid": "^13.0.0",
     "vite-plugin-eslint2": "^5.0.4",
     "vitest": "^3.2.4",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
