--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fast-equals": "^5.3.3",
     "happy-dom": "^20.0.11",
     "magic-regexp": "^0.10.0",
+    "motion-v": "^1.7.4",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
     "playwright-core": "^1.57.0",
