--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "build": "nuxt build .playground",
     "generate": "nuxt generate .playground",
     "preview": "nuxt preview .playground",
-    "lint": "eslint ."
+    "lint": "eslint --fix ."
   },
   "dependencies": {
-    "@clerk/nuxt": "^1.13.4",
-    "@clerk/themes": "^2.4.41",
-    "@clerk/vue": "^1.17.1",
+    "@clerk/nuxt": "^1.13.8",
+    "@clerk/themes": "^2.4.44",
+    "@clerk/vue": "^1.17.4",
     "@iconify-json/heroicons": "^1.2.3",
-    "@nuxt/eslint": "^1.11.0",
+    "@nuxt/eslint": "^1.12.1",
     "@nuxt/image": "^2.0.0",
-    "@nuxt/test-utils": "^3.20.1",
+    "@nuxt/test-utils": "^3.21.0",
     "@nuxt/ui": "^4.2.1",
     "@pinia/colada-devtools": "^0.1.9",
     "@pinia/colada-nuxt": "^0.2.4",
@@ -27,12 +27,12 @@
     "@vueuse/nuxt": "^14.1.0",
     "dayjs": "^1.11.19",
     "deepmerge": "^4.3.1",
-    "eslint": "^9.39.1",
-    "fast-equals": "^5.3.3",
+    "eslint": "^9.39.2",
+    "fast-equals": "^5.4.0",
     "happy-dom": "^20.0.11",
     "magic-regexp": "^0.10.0",
     "motion-v": "^1.7.4",
-    "nuxt": "^4.2.1",
+    "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
     "playwright-core": "^1.57.0",
     "scule": "^1.3.0",
@@ -41,11 +41,14 @@
     "vite-plugin-eslint2": "^5.0.4",
     "vitest": "^3.2.4",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3",
-    "zod": "^4.1.13"
+    "vue-router": "^4.6.4",
+    "zod": "^4.2.0"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
+    "@types/node": "^25.0.2",
+    "eslint-plugin-better-tailwindcss": "^3.8.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.7.4",
     "typescript": "^5.9.3"
   }
 }
